# monitor

./: .gitignore  Cargo.toml  data.csv  doodoo.csv  rand.py  test.py
python/: main.py  pyproject.toml
python/dataset/: README.dataset.txt  README.roboflow.txt  data.yaml
python/dataset/test/labels/: 000000009400_jpg.rf.db8cb55e567ebcfd68971e42f9fc48cb.txt  000000063740_jpg.rf.d1f435f8d9d63c3ccac958ef1daa5eb6.txt  000000082696_jpg.rf.1bdeb926e3ab8a55d7da74726d4dcd95.txt  0c7e2ff6-4ef5-11eb-8169-fa1ce9dbafb6_jpg.rf.ec0190f6a0a328abea929256be12b673.txt  1012_person_jpg.rf.cdf216020b29e1a6b30235cbdc600398.txt  1013_person_jpg.rf.e767bf0f5d838216d343655370ae6ca7.txt  1015_person_jpg.rf.12b47ad881d1c64cfba38cbdcaf7b770.txt  1022_person_jpg.rf.55a5fd79a350cfa9f5ef5d120688fe46.txt  1031_person_jpg.rf.34c2127e538909bd6b5d09581d5afb02.txt  1037_person_jpg.rf.9d3a2c9c4a062608d20130341bf72946.txt  1039_person_jpg.rf.58bb72ff6c82f0ea28814e7505143416.txt  1074_person_jpg.rf.8a373ed3a79f0994f79d74fa830f2457.txt  1080_person_jpg.rf.182b18466d0a82a925ee28d97c99b632.txt  1082_person_jpg.rf.f0289a8627c1adbee7382d96836a6a74.txt  1095_person_jpg.rf.a9ddcd1893c5c3153875dcdc93f77922.txt  1106_person_jpg.rf.c19dca6a3140970b471e2d380b5b4ae2.txt  1113_person_jpg.rf.8d6818c6045dcd166201ea133343be41.txt  111_person_jpg.rf.465f3cf5929f770d944c7bd56a828493.txt  1125_person_jpg.rf.67d358ecca3ca1618999177ad59625c4.txt  1130_person_jpg.rf.f3ee77453bed0c7a00c3bf1666f76406.txt  (+231 more)
python/dataset/train/: labels.cache
python/dataset/valid/: labels.cache
python/runs/detect/yolo_finetune_human/: args.yaml
(+1474 files in other folders)
