[package]
name = "monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.3.1"
image = { version = "0.25.6", features = ["rayon"] }
notify = "8.2.0"
pulp = "0.21.5"
rayon = "1.11.0"
rocket = { version = "0.5.1", features = ["json"] }
sdl2 = "0.38.0"
serde = "1.0.219"
tokio = { version = "1.47.1", features = ["full"] }
